--- a/files/nginx.j2
+++ b/files/nginx.j2
@@ -9,23 +9,50 @@ server {
 
 	server_name {{ shaarli_servername }};
 
-	location / {
-		# First attempt to serve request as file, then
-		# as directory, then fall back to displaying a 404.
-		try_files $uri $uri/ =404;
-	}
-
-	# pass the PHP scripts to FastCGI server
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-
-		# With php5-fpm:
-		fastcgi_pass unix:/var/run/php5-fpm.sock;
-	}
-
-	# protect data directory
-	location /data {
+	location ~ /\. {
+		# deny access to dotfiles
+		access_log off;
+		log_not_found off;
 		deny all;
-		return 403;
+	}
+
+	location ~ ~$ {
+		# deny access to temp editor files, e.g. "script.php~"
+		access_log off;
+		log_not_found off;
+		deny all;
+	}
+
+	location ~* \.(?:ico|css|js|gif|jpe?g|png)$ {
+		# cache static assets
+		expires    max;
+		add_header Pragma public;
+		add_header Cache-Control "public, must-revalidate, proxy-revalidate";
+	}
+
+	location = /favicon.ico {
+		# serve the Shaarli favicon from its custom location
+		alias /var/www/shaarli/images/favicon.ico;
+	}
+
+	location / {
+		# Slim - rewrite URLs
+		try_files $uri /index.php$is_args$args;
+	}
+
+	location ~ (index)\.php$ {
+		# Slim - split URL path into (script_filename, path_info)
+		try_files $uri =404;
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+
+		# filter and proxy PHP requests to PHP-FPM
+		fastcgi_pass   unix:/var/run/php5-fpm.sock;
+		fastcgi_index  index.php;
+		include        fastcgi.conf;
+	}
+
+	location ~ \.php$ {
+		# deny access to all other PHP scripts
+		deny all;
 	}
 }
