--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -1,6 +1,19 @@
+server {
+	listen 80;
+
+	server_name {{ shaarli_nginx_server_name }};
+
+	location / {
+		rewrite ^(.*)$ https://{{ shaarli_nginx_server_name }}$1 permanent;
+	}
+}
 
 server {
-	listen {{ shaarli_nginx_listen }};
+	listen 443;
+
+	ssl on;
+	ssl_certificate /etc/letsencrypt/live/{{ shaarli_nginx_server_name }}/fullchain.pem;
+	ssl_certificate_key /etc/letsencrypt/live/{{ shaarli_nginx_server_name }}/privkey.pem;
 
 	root {{ shaarli_base }};
 
