--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -2,6 +2,8 @@ server {
 	listen 80;
 
 	server_name {{ shaarli_nginx_server_name }};
+	access_log /var/log/nginx/{{ shaarli_nginx_server_name }}.access.log;
+	error_log /var/log/nginx/{{ shaarli_nginx_server_name }}.error.log;
 
 {% if letsencrypt_activate %}
 	location .well-known {
@@ -18,6 +20,8 @@ server {
 	listen 443 ssl;
 
 	server_name {{ shaarli_nginx_server_name }};
+	access_log /var/log/nginx/{{ shaarli_nginx_server_name }}.access.log;
+	error_log /var/log/nginx/{{ shaarli_nginx_server_name }}.error.log;
 
 	ssl on;
 	ssl_certificate /etc/letsencrypt/live/{{ shaarli_nginx_server_name }}/fullchain.pem;
