--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -73,7 +73,7 @@ server {
 		fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
 		# filter and proxy PHP requests to PHP-FPM
-		fastcgi_pass   unix:/var/run/php5-fpm.sock;
+		fastcgi_pass   unix:/var/run/php/php7.0-fpm.sock;
 		fastcgi_index  index.php;
 		include        fastcgi.conf;
 	}
