--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -1,5 +1,6 @@
 server {
 	listen 80;
+	listen [::]:80;
 
 	server_name {{ shaarli_nginx_server_name }};
 	access_log /var/log/nginx/{{ shaarli_nginx_server_name }}.access.log;
@@ -18,6 +19,7 @@ server {
 
 server {
 	listen 443 ssl;
+	listen [::]:443 ssl;
 
 	server_name {{ shaarli_nginx_server_name }};
 	access_log /var/log/nginx/{{ shaarli_nginx_server_name }}.access.log;
